# CIC-Daily-Report

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SYSTEM_STATE.md  pyproject.toml
.github/workflows/: breaking-news.yml  daily-pipeline.yml  heterogeneous-verify.yml  test.yml
_bmad-output/: DESIGN-pipeline-quality-overhaul.md  SPEC-breaking-deferred-fix.md  SPEC-daily-report-enhancements-v1.md  SPEC-daily-report-enhancements-v2.md  SPEC-daily-report-enhancements-v3-final.md  SPEC-pipeline-quality-overhaul.md  TECH-DESIGN-daily-report-enhancements.md  TEST-PLAN-daily-report-enhancements.md
_bmad-output/implementation-artifacts/: hotfix-wave-b-spec.md  sprint-status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/core/: config.yaml
docs/: API_RESEARCH.md  HETEROGENEOUS_VERIFIER.md  OPERATIONS_GUIDE.md  SETUP_GUIDE.md  WAVE-0.6-0.7-ROLLOUT-GUIDE.md  architecture.md  epics.md  implementation-readiness-report.md  prd-validation-report.md  prd.md
docs/brainstorming/: brainstorming-session-2026-03-03.md  brainstorming-session-2026-03-04.md
docs/specs/: PRD-wave3-delivery-redesign.md  SPEC-quality-overhaul-v2.md  SPEC-v2.0-phase2-quality-overhaul.md  v2.0-architecture-redesign.md
gas/: .clasp.json  .claspignore  AutoSetup.gs  Menu.gs  README.md  deploy.ps1
gh-pages/: dashboard-data.json  index.html  style.css
reports/: replay-alpha26.md  replay-mock.md  replay-real.md
scripts/: heterogeneous_verify.py  ingest_url.py  lint_nq05_pattern.py  preflight_check.py  replay_breaking.py  setup_schema.py
src/cic_daily_report/: __init__.py  breaking_pipeline.py  daily_pipeline.py
tests/: conftest.py  test_daily_pipeline_format.py  test_wave3_config_externalization.py
tests/fixtures/: coingecko_usdt_vnd.json  coinlore_global.json  coinlore_tickers.json  cryptopanic_response.json  economic_calendar_sample.json  mexc_tickers.json  rss_feed_sample.json
tests/test_adapters/: test_llm_adapter.py  test_llm_adapter_hang.py  test_llm_adapter_p1b.py  test_nq05_disclaimer_helper.py  test_nq05_marker_false_positive.py  test_nq05_unicode_robust.py
tests/test_breaking/: test_breaking_pipeline_e2e.py  test_cic_action_watcher.py  test_content_generator.py  test_content_generator_limits.py  test_dedup_manager.py  test_event_detector.py  test_event_detector_geo.py  test_feedback.py  test_llm_scorer.py  test_market_trigger.py  test_market_trigger_macro.py  test_qo14_geo_digest.py  test_qo18_sambanova_scorer.py  test_qo19_breaking_enrichment.py  test_qo36_breaking_enrichment_layer.py  test_rag_index.py  test_routing_single_event.py  test_sambanova_persistence.py  test_severity_classifier.py  test_wave052_critical.py  test_wave05_hotfix.py  test_wave063_guards.py  test_wave064_pricesnap_2source.py  test_wave065_validation.py  test_wave066_polish.py  test_wave067_polish.py  test_wave06_factcheck.py  test_wave07_data_scope.py  test_wave082_rag_wire.py  test_wave084_quality_fix.py  test_wave085_devil_patches.py  test_wave0861_patch.py  test_wave0_quick_wins.py  test_wave1_rc1.py
tests/test_collectors/: test_coinalyze_data.py  (+22 more)
(+127 files in other folders)
