[project]
name = "cic-daily-report"
version = "0.13.1"
description = "Automated crypto daily report pipeline for CIC community"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "gspread>=6.0",
    "google-auth>=2.0",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "yfinance>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
cic-daily = "cic_daily_report.daily_pipeline:main"
cic-breaking = "cic_daily_report.breaking_pipeline:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/cic_daily_report"]

[tool.coverage.report]
fail_under = 60

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cic_daily_report"]
